# husky-trainer

./: CMakeLists.txt  README.md  package.xml
cfg/: Repeat.cfg  controller_params.cfg  repeat_params.cfg
include/husky_trainer/: AnchorPoint.h  CloudRecorder.h  CommandRepeater.h  Controller.h  ControllerMappings.h  GeoUtil.h  PointMatching.h  Repeat.h
launch/: husky-repeat.launch  husky-teach.launch
msg/: AnchorPointSwitch.msg  NamedPointCloud.msg
src/: AnchorPoint.cpp  CloudRecorder.cpp  CommandRepeater.cpp  Controller.cpp  GeoUtil.cpp  PointMatching.cpp  Repeat.cpp  cloud_recorder.cpp  command_repeater_main.cpp  repeat.cpp  repeat_main.cpp  teach.cpp
test/: husky_trainer_test.cpp  sample.pcd
